--- a/.editorconfig
+++ b/.editorconfig
@@ -11,13 +11,24 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md, *.yml]
+[*.{md,yml}]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
+
+[configs/**.md]
+insert_final_newline = false
 
 [*.scss]
 end_of_line = lf
 
 [*.{js,jsx,ts,tsx}]
 quote_type = single
+
+[{package-lock.json,CMakeLists.txt}]
+indent_style = space
+indent_size = 2
+
+[pico_sdk_import.cmake]
+indent_style = space
+indent_size = 4
