--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,12 +1,12 @@
+---
 name: CMake
 
+# yamllint disable-line rule:truthy
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-#  pull_request_target:
-#    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 env:
@@ -23,10 +23,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # TODO: try reformatting this list with prettier
         GP2040_BOARDCONFIG: [ARCController, Blank, Pico, PicoW, BentoBox, ergoSHIFTRev2, FightboardV3, FightboardV3Mirrored, FlatboxRev4, FlatboxRev5, FlatboxRev5RGB, FlatboxRev5USBPassthrough, FlatboxRev5Southpaw, Granola, KB2040, KeyboardConverter, Haute42COSMOX, Liatris, MavercadeRev1, MavercadeRev2, MiSTercadeV2, OpenCore0, OpenCore0WASD, OSUMGP-RP2040, PicoAnn, PicoFightingBoard, PXPGamepad, RanaTadpole, ReflexCtrlGenesis6, ReflexCtrlNES, ReflexCtrlSaturn, ReflexCtrlSNES, ReflexCtrlVB, ReflexEncodeV1.2, ReflexEncodeV2.0, RP2040AdvancedBreakoutBoard, RP2040AdvancedBreakoutBoardUSBPassthrough, RP2040MiniBreakoutBoard, SparkFunProMicro, WaveshareZero, Stress, SGFDevices, ZeroRhythm]
 
     steps:
-    #Global Setup
+    # Global Setup
+    # yamllint disable-line rule:indentation
     - name: Checkout GP2040-CE
       uses: actions/checkout@v4.1.1
       with:
@@ -44,8 +46,9 @@ jobs:
 
     - name: Get core count
       id: core_count
-      run : cat /proc/cpuinfo  | grep processor | wc -l
-      #End Global Setup
+      # shellcheck disable=SC2002,SC2126
+      run: cat /proc/cpuinfo | grep processor | wc -l
+      # End Global Setup
 
     - name: Pico Build Configure CMake
       shell: bash
